--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
+    "@types/html-entities": "^1.3.3",
     "@types/node": "^22.15.2",
     "@types/selenium-webdriver": "^4.1.28",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "cheerio": "^1.0.0",
     "chromedriver": "^135.0.4",
     "clipboardy": "^4.0.0",
+    "html-entities": "^2.6.0",
     "selenium-webdriver": "^4.31.0"
   }
 }
