--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@langchain/openai": "^0.5.7",
     "cheerio": "^1.0.0",
     "chromedriver": "^135.0.4",
     "clipboardy": "^4.0.0",
+    "dotenv": "^16.5.0",
     "html-entities": "^2.6.0",
+    "langchain": "^0.3.24",
+    "openai": "^4.96.0",
     "selenium-webdriver": "^4.31.0"
   }
 }
